Added fire trail

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 </head>
 
 <body>
+    <!-- Fire Trail (cursor) -->
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+
+    <!-- NAVBAR -->
     <nav class="main__navbar">
         <ul class="main__navbar__ul">
             <li class="main__navbar__li">
@@ -29,6 +42,8 @@
             </li>
         </ul>
     </nav>
+
+    <!-- HEADER -->
     <section class="main__header" id="main__header">
         <div class="cards">
             <div class="card">
@@ -76,6 +91,8 @@
             <div class="circle__line circle__line__2"></div>
         </div>
     </div>
+
+    <!-- SOCIALS -->
     <section class="main__socials" id="main__socials">
         <div class="social__container">
             <div class="social-1 social">
